--- a/scss/modules/type/_module.scss
+++ b/scss/modules/type/_module.scss
@@ -50,6 +50,14 @@ $type-p-line-height: 1.5 !default;
 $type-p-font-weight: $type-base-font-weight !default;
 $type-p-lead-scale: 1 !default;
 
+// Preformatted Text
+$type-pre-color: $type-base-color !default;
+$type-pre-scale: 0 !default;
+$type-pre-font-family: $type-monospace-font-family !default;
+$type-code-color: $type-pre-color !default;
+$type-code-scale: -1 !default;
+$type-code-font-family: $type-pre-font-family !default;
+
 // Imports
 @import
 	'_mixins',
