--- a/scss/modules/type/_module.scss
+++ b/scss/modules/type/_module.scss
@@ -57,6 +57,7 @@ $type-pre-font-family: $type-monospace-font-family !default;
 $type-code-color: $type-pre-color !default;
 $type-code-scale: -1 !default;
 $type-code-font-family: $type-pre-font-family !default;
+$type-kbd-scale: -2 !default;
 
 // Imports
 @import
