--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -29,7 +29,7 @@ $color-secondary: gray !default;
 $color-dark: #222 !default;
 $color-light: #EFEFEF !default;
 $color-gray: #9A9A9A !default;
-$color-gray-light: #DEDEDE !default;
+$color-gray-light: #F7F7F7 !default;
 
 $color-success: #96CC69 !default;
 $color-warning: #FFCC5C !default;
