--- a/css/cadenza.css
+++ b/css/cadenza.css
@@ -3874,48 +3874,6 @@ hgroup > h1, .hgroup > h1, hgroup > h2, .hgroup > h2, hgroup > h3, .hgroup > h3,
   margin-bottom: 0;
 }
 
-/* line 80, ../scss/modules/type/_components.scss */
-h1, .h1 {
-  font-size: 16px ;
-  font-size: 1rem ;
-}
-
-/* line 80, ../scss/modules/type/_components.scss */
-h2, .h2 {
-  font-size: 18.5824px ;
-  font-size: 1.1614rem ;
-}
-
-/* line 80, ../scss/modules/type/_components.scss */
-h3, .h3 {
-  font-size: 21.5816px ;
-  font-size: 1.34885rem ;
-}
-
-/* line 80, ../scss/modules/type/_components.scss */
-h4, .h4 {
-  font-size: 25.06487px ;
-  font-size: 1.56655rem ;
-}
-
-/* line 80, ../scss/modules/type/_components.scss */
-h3, .h3 {
-  font-size: 29.11034px ;
-  font-size: 1.8194rem ;
-}
-
-/* line 80, ../scss/modules/type/_components.scss */
-h2, .h2 {
-  font-size: 33.80875px ;
-  font-size: 2.11305rem ;
-}
-
-/* line 80, ../scss/modules/type/_components.scss */
-h1, .h1 {
-  font-size: 39.26548px ;
-  font-size: 2.45409rem ;
-}
-
 /* line 87, ../scss/modules/type/_components.scss */
 body {
   font-style: normal;
@@ -4019,26 +3977,52 @@ pre code, pre .code, .pre code, .pre .code, code, .code {
   font-family: monospace;
 }
 
+/* line 189, ../scss/modules/type/_components.scss */
+kbd, .kbd {
+  font-size: 11.86196px ;
+  font-size: 0.74137rem ;
+}
+
 /* line 12, ../scss/modules/type/_themes.scss */
-body h6 {
+body h6, body .h6 {
   text-transform: uppercase;
 }
 
 /* line 17, ../scss/modules/type/_themes.scss */
-body h1, body h2, body h3, body h4, body h5, body h6 {
+body h1, body h2, body h3, body h4, body h5, body h6, body .h1, body .h2, body .h3, body .h4, body .h5, body .h6 {
   color: #222222;
 }
 /* line 20, ../scss/modules/type/_themes.scss */
-body h1.sub, body h1.subheading, body h1.h1.sub, body h1.h1.subheading, body h1.h2.sub, body h1.h2.subheading, body h1.h3.sub, body h1.h3.subheading, body h1.h4.sub, body h1.h4.subheading, body h1 > h1.small, body .h1 > h1.small, body h2 > h1.small, body .h2 > h1.small, body h3 > h1.small, body .h3 > h1.small, body h4 > h1.small, body .h4 > h1.small, body h2.h1.sub, body h2.h1.subheading, body h2.sub, body h2.subheading, body h2.h2.sub, body h2.h2.subheading, body h2.h3.sub, body h2.h3.subheading, body h2.h4.sub, body h2.h4.subheading, body h1 > h2.small, body .h1 > h2.small, body h2 > h2.small, body .h2 > h2.small, body h3 > h2.small, body .h3 > h2.small, body h4 > h2.small, body .h4 > h2.small, body h3.h1.sub, body h3.h1.subheading, body h3.h2.sub, body h3.h2.subheading, body h3.sub, body h3.subheading, body h3.h3.sub, body h3.h3.subheading, body h3.h4.sub, body h3.h4.subheading, body h1 > h3.small, body .h1 > h3.small, body h2 > h3.small, body .h2 > h3.small, body h3 > h3.small, body .h3 > h3.small, body h4 > h3.small, body .h4 > h3.small, body h4.h1.sub, body h4.h1.subheading, body h4.h2.sub, body h4.h2.subheading, body h4.h3.sub, body h4.h3.subheading, body h4.sub, body h4.subheading, body h4.h4.sub, body h4.h4.subheading, body h1 > h4.small, body .h1 > h4.small, body h2 > h4.small, body .h2 > h4.small, body h3 > h4.small, body .h3 > h4.small, body h4 > h4.small, body .h4 > h4.small, body h5.h1.sub, body h5.h1.subheading, body h5.h2.sub, body h5.h2.subheading, body h5.h3.sub, body h5.h3.subheading, body h5.h4.sub, body h5.h4.subheading, body h1 > h5.small, body .h1 > h5.small, body h2 > h5.small, body .h2 > h5.small, body h3 > h5.small, body .h3 > h5.small, body h4 > h5.small, body .h4 > h5.small, body h6.h1.sub, body h6.h1.subheading, body h6.h2.sub, body h6.h2.subheading, body h6.h3.sub, body h6.h3.subheading, body h6.h4.sub, body h6.h4.subheading, body h1 > h6.small, body .h1 > h6.small, body h2 > h6.small, body .h2 > h6.small, body h3 > h6.small, body .h3 > h6.small, body h4 > h6.small, body .h4 > h6.small {
+body h1.sub, body h1.subheading, body h1.h1.sub, body h1.h1.subheading, body h1.h2.sub, body h1.h2.subheading, body h1.h3.sub, body h1.h3.subheading, body h1.h4.sub, body h1.h4.subheading, body h1 > h1.small, body .h1 > h1.small, body h2 > h1.small, body .h2 > h1.small, body h3 > h1.small, body .h3 > h1.small, body h4 > h1.small, body .h4 > h1.small, body h2.h1.sub, body h2.h1.subheading, body h2.sub, body h2.subheading, body h2.h2.sub, body h2.h2.subheading, body h2.h3.sub, body h2.h3.subheading, body h2.h4.sub, body h2.h4.subheading, body h1 > h2.small, body .h1 > h2.small, body h2 > h2.small, body .h2 > h2.small, body h3 > h2.small, body .h3 > h2.small, body h4 > h2.small, body .h4 > h2.small, body h3.h1.sub, body h3.h1.subheading, body h3.h2.sub, body h3.h2.subheading, body h3.sub, body h3.subheading, body h3.h3.sub, body h3.h3.subheading, body h3.h4.sub, body h3.h4.subheading, body h1 > h3.small, body .h1 > h3.small, body h2 > h3.small, body .h2 > h3.small, body h3 > h3.small, body .h3 > h3.small, body h4 > h3.small, body .h4 > h3.small, body h4.h1.sub, body h4.h1.subheading, body h4.h2.sub, body h4.h2.subheading, body h4.h3.sub, body h4.h3.subheading, body h4.sub, body h4.subheading, body h4.h4.sub, body h4.h4.subheading, body h1 > h4.small, body .h1 > h4.small, body h2 > h4.small, body .h2 > h4.small, body h3 > h4.small, body .h3 > h4.small, body h4 > h4.small, body .h4 > h4.small, body h5.h1.sub, body h5.h1.subheading, body h5.h2.sub, body h5.h2.subheading, body h5.h3.sub, body h5.h3.subheading, body h5.h4.sub, body h5.h4.subheading, body h1 > h5.small, body .h1 > h5.small, body h2 > h5.small, body .h2 > h5.small, body h3 > h5.small, body .h3 > h5.small, body h4 > h5.small, body .h4 > h5.small, body h6.h1.sub, body h6.h1.subheading, body h6.h2.sub, body h6.h2.subheading, body h6.h3.sub, body h6.h3.subheading, body h6.h4.sub, body h6.h4.subheading, body h1 > h6.small, body .h1 > h6.small, body h2 > h6.small, body .h2 > h6.small, body h3 > h6.small, body .h3 > h6.small, body h4 > h6.small, body .h4 > h6.small, body .h1.sub, body .h1.subheading, body h1 > small.h1, body h1 > .h1.small, body h1 > input.h1[type].small, body .h1 > small.h1, body .h1 > .h1.small, body h2 > small.h1, body h2 > .h1.small, body h2 > input.h1[type].small, body .h2 > small.h1, body .h2 > .h1.small, body h3 > small.h1, body h3 > .h1.small, body h3 > input.h1[type].small, body .h3 > small.h1, body .h3 > .h1.small, body h4 > small.h1, body h4 > .h1.small, body h4 > input.h1[type].small, body .h4 > small.h1, body .h4 > .h1.small, body .h2.sub, body .h2.subheading, body h1 > small.h2, body h1 > .h2.small, body h1 > input.h2[type].small, body .h1 > small.h2, body .h1 > .h2.small, body h2 > small.h2, body h2 > .h2.small, body h2 > input.h2[type].small, body .h2 > small.h2, body .h2 > .h2.small, body h3 > small.h2, body h3 > .h2.small, body h3 > input.h2[type].small, body .h3 > small.h2, body .h3 > .h2.small, body h4 > small.h2, body h4 > .h2.small, body h4 > input.h2[type].small, body .h4 > small.h2, body .h4 > .h2.small, body .h3.sub, body .h3.subheading, body h1 > small.h3, body h1 > .h3.small, body h1 > input.h3[type].small, body .h1 > small.h3, body .h1 > .h3.small, body h2 > small.h3, body h2 > .h3.small, body h2 > input.h3[type].small, body .h2 > small.h3, body .h2 > .h3.small, body h3 > small.h3, body h3 > .h3.small, body h3 > input.h3[type].small, body .h3 > small.h3, body .h3 > .h3.small, body h4 > small.h3, body h4 > .h3.small, body h4 > input.h3[type].small, body .h4 > small.h3, body .h4 > .h3.small, body .h4.sub, body .h4.subheading, body h1 > small.h4, body h1 > .h4.small, body h1 > input.h4[type].small, body .h1 > small.h4, body .h1 > .h4.small, body h2 > small.h4, body h2 > .h4.small, body h2 > input.h4[type].small, body .h2 > small.h4, body .h2 > .h4.small, body h3 > small.h4, body h3 > .h4.small, body h3 > input.h4[type].small, body .h3 > small.h4, body .h3 > .h4.small, body h4 > small.h4, body h4 > .h4.small, body h4 > input.h4[type].small, body .h4 > small.h4, body .h4 > .h4.small, body h1.h5.sub, body h1.h5.subheading, body .h5.h1.sub, body .h5.h1.subheading, body h2.h5.sub, body h2.h5.subheading, body .h5.h2.sub, body .h5.h2.subheading, body h3.h5.sub, body h3.h5.subheading, body .h5.h3.sub, body .h5.h3.subheading, body h4.h5.sub, body h4.h5.subheading, body .h5.h4.sub, body .h5.h4.subheading, body h1 > small.h5, body h1 > .h5.small, body h1 > input.h5[type].small, body .h1 > small.h5, body .h1 > .h5.small, body h2 > small.h5, body h2 > .h5.small, body h2 > input.h5[type].small, body .h2 > small.h5, body .h2 > .h5.small, body h3 > small.h5, body h3 > .h5.small, body h3 > input.h5[type].small, body .h3 > small.h5, body .h3 > .h5.small, body h4 > small.h5, body h4 > .h5.small, body h4 > input.h5[type].small, body .h4 > small.h5, body .h4 > .h5.small, body h1.h6.sub, body h1.h6.subheading, body .h6.h1.sub, body .h6.h1.subheading, body h2.h6.sub, body h2.h6.subheading, body .h6.h2.sub, body .h6.h2.subheading, body h3.h6.sub, body h3.h6.subheading, body .h6.h3.sub, body .h6.h3.subheading, body h4.h6.sub, body h4.h6.subheading, body .h6.h4.sub, body .h6.h4.subheading, body h1 > small.h6, body h1 > .h6.small, body h1 > input.h6[type].small, body .h1 > small.h6, body .h1 > .h6.small, body h2 > small.h6, body h2 > .h6.small, body h2 > input.h6[type].small, body .h2 > small.h6, body .h2 > .h6.small, body h3 > small.h6, body h3 > .h6.small, body h3 > input.h6[type].small, body .h3 > small.h6, body .h3 > .h6.small, body h4 > small.h6, body h4 > .h6.small, body h4 > input.h6[type].small, body .h4 > small.h6, body .h4 > .h6.small {
   color: #9a9a9a;
 }
 /* line 45, ../scss/modules/type/_themes.scss */
-body pre {
+body pre, body .pre {
   color: #222222;
 }
 /* line 49, ../scss/modules/type/_themes.scss */
-body code {
+body code, body .code {
   color: #222222;
+}
+/* line 54, ../scss/modules/type/_themes.scss */
+body kbd, body kbd.light, body .kbd, body .kbd.light {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #222222;
+  padding: 0.25rem 0.5rem;
+  background: #f7f7f7;
+  border: 1px solid #9a9a9a;
+  border-bottom-width: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+}
+/* line 64, ../scss/modules/type/_themes.scss */
+body kbd.dark, body .kbd.dark {
+  color: #efefef;
+  background: #3c3c3c;
+  border-color: #222222;
 }
 /* line 24, ../scss/modules/_anchors.scss */
 a {
