--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -73,22 +73,22 @@ $type-header-small-style: uppercase !default;
 
 $hgroup-margin-bottom: $type-header-margin-bottom !default;
 
-$type-p-margin-bottom: $x-rem !default;
-$type-p-line-height: 1.5 !default;
-$type-p-font-weight: $type-base-font-weight !default;
-$type-p-lead-type-scale: 1 !default;
+// $type-p-margin-bottom: $x-rem !default;
+// $type-p-line-height: 1.5 !default;
+// $type-p-font-weight: $type-base-font-weight !default;
+// $type-p-lead-type-scale: 1 !default;
 
 $type-subheader-color: lighten($type-header-color, 15%) !default;
 $type-subheader-font-weight: 300 !default;
 $type-subheader-margin-top: 0 !default;
 $type-subheader-margin-bottom: $x-rem !default;
 
-$type-pre-color: $type-base-color !default;
-$type-pre-scale: 0 !default;
-$type-pre-font-family: monospace;
-$type-code-color: $type-pre-color !default;
-$type-code-scale: -1 !default;
-$type-code-font-family: $type-pre-font-family;
+// $type-pre-color: $type-base-color !default;
+// $type-pre-scale: 0 !default;
+// $type-pre-font-family: monospace;
+// $type-code-color: $type-pre-color !default;
+// $type-code-scale: -1 !default;
+// $type-code-font-family: $type-pre-font-family;
 
 $type-list-position: outside !default;
 $type-list-margin-bottom: 1rem !default;
@@ -99,12 +99,12 @@ $type-list-dl-header-margin-bottom: $x-rem / 2 !default;
 $type-list-dl-margin-bottom: $x-rem / 2 !default;
 $type-list-inline-margin: $x-rem !default;
 
-$type-blockquote-color: lighten($type-base-color, 15%) !default;
-$type-blockquote-padding: 1rem !default;
-$type-blockquote-border: 1px solid $type-blockquote-color !default;
-$type-blockquote-cite-scale: -1 !default;
-$type-blockquote-cite-color: $type-blockquote-color !default;
-$type-blockquote-margin-bottom: $x-rem !default;
+// $type-blockquote-color: lighten($type-base-color, 15%) !default;
+// $type-blockquote-padding: 1rem !default;
+// $type-blockquote-border: 1px solid $type-blockquote-color !default;
+// $type-blockquote-cite-scale: -1 !default;
+// $type-blockquote-cite-color: $type-blockquote-color !default;
+// $type-blockquote-margin-bottom: $x-rem !default;
 
 $type-abbr-border: 1px dotted $color-secondary !default;
 $type-abbr-cursor: help !default;
