--- a/css/cadenza.css
+++ b/css/cadenza.css
@@ -4050,6 +4050,17 @@ q.low-single::after {
   content: '\2019';
 }
 
+/* line 243, ../scss/modules/type/_components.scss */
+hr, .hr {
+  clear: both;
+  height: 0;
+  margin: 1rem 0;
+  margin-left: 0;
+  margin-right: 0;
+  border-top: 1px solid #f7f7f7;
+  border-bottom: none;
+}
+
 /* line 15, ../scss/modules/type/_themes.scss */
 body h6, body .h6 {
   text-transform: uppercase;
