--- a/scss/modules/type/_module.scss
+++ b/scss/modules/type/_module.scss
@@ -73,6 +73,10 @@ $type-blockquote-footer-color: $color-gray !default;
 $type-blockquote-border-color: $type-blockquote-color !default;
 $type-blockquote-margin-bottom: 1rem !default;
 
+// Horizontal Rule
+$type-hr-margin: 1rem 0 !default;
+$type-hr-border: 1px solid $color-gray-light !default;
+
 
 // Imports
 @import
