--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -90,14 +90,14 @@ $type-subheader-margin-bottom: $x-rem !default;
 // $type-code-scale: -1 !default;
 // $type-code-font-family: $type-pre-font-family;
 
-$type-list-position: outside !default;
-$type-list-margin-bottom: 1rem !default;
-$type-list-ul-margin: 1rem !default;
-$type-list-ol-margin: 1.4rem !default;
-$type-list-dl-header-weight: bold !default;
-$type-list-dl-header-margin-bottom: $x-rem / 2 !default;
-$type-list-dl-margin-bottom: $x-rem / 2 !default;
-$type-list-inline-margin: $x-rem !default;
+// $type-list-position: outside !default;
+// $type-list-margin-bottom: 1rem !default;
+// $type-list-ul-margin: 1rem !default;
+// $type-list-ol-margin: 1.4rem !default;
+// $type-list-dl-header-weight: bold !default;
+// $type-list-dl-header-margin-bottom: $x-rem / 2 !default;
+// $type-list-dl-margin-bottom: $x-rem / 2 !default;
+// $type-list-inline-margin: $x-rem !default;
 
 // $type-blockquote-color: lighten($type-base-color, 15%) !default;
 // $type-blockquote-padding: 1rem !default;
