--- a/scss/modules/type/_module.scss
+++ b/scss/modules/type/_module.scss
@@ -3,6 +3,8 @@
 // ===========
 
 // Base Type Settings
+$type-style: default !default;
+$type-theme: default !default;
 $type-unit: rem !default;
 $type-ratio: 1.25 !default;
 $type-base-font-size: 16px !default; // = 1rem
